--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,13 @@
 }
 
 :root {
-  --color-1: #242526;
+  --color-1: #11161c;
   --color-2: white;
   --color-3: #0084ff;
   --color-4: grey;
   --color-5: #eb4034;
   --color-6: #333;
-  --color-7: rgb(209, 209, 209);
+  --color-7: rgb(200 208 212 / 40%);
 }
 
 /* Navbar */
@@ -20,7 +20,7 @@ nav {
   height: 70px;
   padding: 0px 20px;
   background-color: var(--color-1);
-  border-bottom: 1px solid var(--color-6);
+  border-bottom: 1px solid var(--color-7);
 }
 nav a {
   color: var(--color-2);
@@ -34,7 +34,7 @@ section {
   max-width: 500px;
   margin: 0 auto;
   margin-top: 100px;
-  box-shadow: 1px 2px 10px var(--color-4);
+  box-shadow: 1px 2px 10px var(--color-7);
   padding: 10px 20px;
   border-radius: 5px;
 }
@@ -56,7 +56,7 @@ section .form {
   padding: 10px;
   outline: none;
   margin-top: 10px;
-  border: 1px solid var(--color-6);
+  border: 1px solid var(--color-7);
   border-radius: 5px;
 }
 .btn_container {
@@ -64,7 +64,7 @@ section .form {
   text-align: center;
 }
 .btn {
-  padding: 10px;
+  padding: 10px 20px;
   border-radius: 5px;
   outline: none;
   border: 1px solid var(--color-4);
@@ -130,7 +130,7 @@ section .form {
 }
 .users_container {
   margin-top: 10px;
-  border-right: 2px solid var(--color-6);
+  border-right: 2px solid var(--color-7);
   overflow-y: auto;
 }
 .user_wrapper {
@@ -177,7 +177,8 @@ section .form {
   padding: 10px;
   text-align: center;
   border-bottom: 2px solid var(--color-6);
-  background-color: var(--color-7);
+  background-color: var(--color-1);
+  color: white;
 }
 .no_conv {
   font-size: 20px;
@@ -207,7 +208,7 @@ section .form {
 .messages {
   height: calc(100vh - 200px);
   overflow-y: auto;
-  border-bottom: 1px solid var(--color-6);
+  border-bottom: 1px solid var(--color-7);
 }
 .message_wrapper {
   margin-top: 5px;
