--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,12 @@ section .form {
 .btn:hover {
   transform: scale(1.05);
 }
+
+.link:hover {
+  transform: scale(1.05);
+  color: var(--color-7);
+  transition: 0.3s ease-in-out all;
+}
 .error {
   text-align: center;
   color: var(--color-5);
@@ -132,6 +138,7 @@ section .form {
   margin-top: 10px;
   border-right: 2px solid var(--color-7);
   overflow-y: auto;
+  resize: horizontal;
 }
 .user_wrapper {
   margin-bottom: 10px;
@@ -186,13 +193,16 @@ section .form {
   text-align: center;
 }
 .message_form {
-  position: absolute;
-  bottom: 0;
-  left: 20%;
+  /* position: absolute; */
+  /* bottom: 0; */
+  /* left: 20%; */
+  padding-top: 10px;
   width: 100%;
   height: 30px;
   display: flex;
   align-items: center;
+  justify-content: center;
+  height: 50px;
 }
 .message_form input {
   width: 40vw;
@@ -282,9 +292,9 @@ section .form {
   .home_container {
     grid-template-columns: 1fr 5fr;
   }
-  .user_wrapper {
-    /* display: none; */
-  }
+  /* .user_wrapper {
+    display: none;
+  } */
 
   .user_detail h4 {
     display: none;
@@ -300,6 +310,9 @@ section .form {
   .message_form input {
     width: 50vw;
     margin: 0px 10px;
+  }
+  .message_form {
+    padding-bottom: 10px;
   }
   .message_form .btn {
     margin: 0px;
